# finances

./: .gitignore  CMakeLists.txt  build.sh  run.sh
src/: main.cpp  main_window.cpp  main_window.hpp  sidebar.cpp  sidebar.hpp  storage.cpp  storage.hpp
src/models/: category.hpp
src/pages/: add_category.cpp  add_category.hpp  analytic.cpp  analytic.hpp  category.cpp  category.hpp  operation.cpp  operation.hpp  page.hpp  type.hpp
